Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -325,8 +325,8 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 235px">
-			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_21.png&amp;filetimestamp=20200601161406&amp;.html" class="mw-file-description" title="Innenliegend"><img alt="Innenliegend" src="../File/FCCircularText_21.png" decoding="async" width="200" height="141" class="mw-file-element" data-file-width="246" data-file-height="174"></a></span></div>
-			<div class="gallerytext"><b>Innenliegend</b></div>
+			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_21.png&amp;filetimestamp=20200601161406&amp;.html" class="mw-file-description" title="Innerhalb"><img alt="Innerhalb" src="../File/FCCircularText_21.png" decoding="async" width="200" height="141" class="mw-file-element" data-file-width="246" data-file-height="174"></a></span></div>
+			<div class="gallerytext"><b>Innerhalb</b></div>
 		</li>
 		<li class="gallerybox" style="width: 235px">
 			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_03.png&amp;filetimestamp=20140825210343&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_03.png" decoding="async" width="200" height="158" class="mw-file-element" data-file-width="531" data-file-height="419"></a></span></div>
@@ -980,35 +980,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117155921
+Cached time: 20260117155953
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.417 seconds
-Real time usage: 0.531 seconds
+CPU time usage: 0.441 seconds
+Real time usage: 0.549 seconds
 Preprocessor visited node count: 1598/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66496/5000000 bytes
+Unstrip post&#8208;expand size: 66487/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  326.424      1 -total
-  2.03%    6.628      1 Template:Draft_Tools_navi/de
-  1.46%    4.776     10 Template:Code
-  1.24%    4.054      1 Template:Macro/de
-  1.12%    3.660      6 Template:SpinBox
-  1.03%    3.356     10 Template:CheckBox
-  1.02%    3.314      1 Template:Caption
-  0.87%    2.829      2 Template:Navigation_menu_2
-  0.79%    2.569      7 Template:RadioButton
-  0.77%    2.511      1 Template:Codeextralink
+100.00%  291.571      1 -total
+  2.52%    7.362      1 Template:Draft_Tools_navi/de
+  2.01%    5.850     10 Template:Code
+  1.45%    4.216      1 Template:Userdocnavi/de
+  1.41%    4.102      2 Template:Navigation_menu_2
+  0.95%    2.775      7 Template:RadioButton
+  0.88%    2.580      3 Template:ColoredText
+  0.85%    2.484      6 Template:SpinBox
+  0.84%    2.460     14 Template:Incode
+  0.84%    2.445     10 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117155920 and revision id 1739603. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117155952 and revision id 1739605. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
