Created page with "<center> <gallery widths="200" heights="180"> Image:FCCircularText 01.png|'''Mode Stand''' '''Outdoor''' Der Text wird oberhalb geschrieben. Image:FCCircularText_40.png|'''Mode Flat''' '''Outdoor''' Der Text wird flach platziert.. </gallery> </center>"

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -246,20 +246,18 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_24.png&amp;filetimestamp=20200601142252&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_24.png" decoding="async" width="248" height="176" class="mw-file-element" data-file-width="248" data-file-height="176"></a><figcaption></figcaption></figure>
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> oder <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>&nbsp;: Der Text wird stehend oder flach (wie bei einer Uhr) platziert. Die Optionen &bdquo;au&szlig;enliegend&ldquo; und &bdquo;innenliegend&ldquo; sind vertauscht.</li></ul>
 <div style="clear:both"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 235px">
-			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_01.png&amp;filetimestamp=20140820192111&amp;.html" class="mw-file-description" title="Mode Stand Outdoor The text will be written up."><img alt="Mode Stand Outdoor The text will be written up." src="../File/FCCircularText_01.png" decoding="async" width="200" height="137" class="mw-file-element" data-file-width="594" data-file-height="407"></a></span></div>
-			<div class="gallerytext"><b>Mode Stand</b> <b>Outdoor</b> The text will be written up.</div>
+			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_01.png&amp;filetimestamp=20140820192111&amp;.html" class="mw-file-description" title="Mode Stand Outdoor Der Text wird oberhalb geschrieben."><img alt="Mode Stand Outdoor Der Text wird oberhalb geschrieben." src="../File/FCCircularText_01.png" decoding="async" width="200" height="137" class="mw-file-element" data-file-width="594" data-file-height="407"></a></span></div>
+			<div class="gallerytext"><b>Mode Stand</b> <b>Outdoor</b> Der Text wird oberhalb geschrieben.</div>
 		</li>
 		<li class="gallerybox" style="width: 235px">
-			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_40.png&amp;filetimestamp=20141124210637&amp;.html" class="mw-file-description" title="Mode Flat Outdoor The text will be placed flat."><img alt="Mode Flat Outdoor The text will be placed flat." src="../File/FCCircularText_40.png" decoding="async" width="200" height="129" class="mw-file-element" data-file-width="498" data-file-height="320"></a></span></div>
-			<div class="gallerytext"><b>Mode Flat</b> <b>Outdoor</b> The text will be placed flat.</div>
+			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_40.png&amp;filetimestamp=20141124210637&amp;.html" class="mw-file-description" title="Mode Flat Outdoor Der Text wird flach platziert.."><img alt="Mode Flat Outdoor Der Text wird flach platziert.." src="../File/FCCircularText_40.png" decoding="async" width="200" height="129" class="mw-file-element" data-file-width="498" data-file-height="320"></a></span></div>
+			<div class="gallerytext"><b>Mode Flat</b> <b>Outdoor</b> Der Text wird flach platziert..</div>
 		</li>
 </ul>
 </center>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <center>
 <ul class="gallery mw-gallery-traditional">
@@ -978,35 +976,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117160505
+Cached time: 20260117160608
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.486 seconds
-Real time usage: 0.708 seconds
-Preprocessor visited node count: 1597/1000000
+CPU time usage: 0.503 seconds
+Real time usage: 0.929 seconds
+Preprocessor visited node count: 1596/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66487/5000000 bytes
+Unstrip post&#8208;expand size: 66514/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  455.660      1 -total
-  2.15%    9.786      1 Template:Draft_Tools_navi/de
-  1.18%    5.395     10 Template:Code
-  0.95%    4.324      2 Template:Navigation_menu_2
-  0.86%    3.911      7 Template:RadioButton
-  0.82%    3.757      1 Template:Macro/de
-  0.81%    3.671     10 Template:CheckBox
-  0.61%    2.773      3 Template:ColoredText
-  0.56%    2.570      6 Template:SpinBox
-  0.56%    2.532      1 Template:Userdocnavi/de
+100.00%  553.283      1 -total
+  2.82%   15.610      1 Template:Draft_Tools_navi/de
+  1.41%    7.794     10 Template:Code
+  1.37%    7.605      3 Template:ColoredText
+  1.24%    6.874      2 Template:Navigation_menu_2
+  0.92%    5.085      1 Template:Userdocnavi/de
+  0.76%    4.208      7 Template:RadioButton
+  0.51%    2.816     10 Template:CheckBox
+  0.49%    2.697      1 Template:Emphasis
+  0.46%    2.543      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117160505 and revision id 1739607. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117160607 and revision id 1739609. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
