--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -253,8 +253,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 			<div class="gallerytext"><b>Mode Stand</b> <b>Outdoor</b> Der Text wird oberhalb geschrieben.</div>
 		</li>
 		<li class="gallerybox" style="width: 235px">
-			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_40.png&amp;filetimestamp=20141124210637&amp;.html" class="mw-file-description" title="Mode Flat Outdoor Der Text wird flach platziert.."><img alt="Mode Flat Outdoor Der Text wird flach platziert.." src="../File/FCCircularText_40.png" decoding="async" width="200" height="129" class="mw-file-element" data-file-width="498" data-file-height="320"></a></span></div>
-			<div class="gallerytext"><b>Mode Flat</b> <b>Outdoor</b> Der Text wird flach platziert..</div>
+			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_40.png&amp;filetimestamp=20141124210637&amp;.html" class="mw-file-description" title="Mode Flat Outdoor Der Text wird flach platziert."><img alt="Mode Flat Outdoor Der Text wird flach platziert." src="../File/FCCircularText_40.png" decoding="async" width="200" height="129" class="mw-file-element" data-file-width="498" data-file-height="320"></a></span></div>
+			<div class="gallerytext"><b>Mode Flat</b> <b>Outdoor</b> Der Text wird flach platziert.</div>
 		</li>
 </ul>
 </center>
@@ -976,35 +976,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117160608
+Cached time: 20260117160627
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.503 seconds
-Real time usage: 0.929 seconds
+CPU time usage: 0.431 seconds
+Real time usage: 0.971 seconds
 Preprocessor visited node count: 1596/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66514/5000000 bytes
+Unstrip post&#8208;expand size: 66511/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  553.283      1 -total
-  2.82%   15.610      1 Template:Draft_Tools_navi/de
-  1.41%    7.794     10 Template:Code
-  1.37%    7.605      3 Template:ColoredText
-  1.24%    6.874      2 Template:Navigation_menu_2
-  0.92%    5.085      1 Template:Userdocnavi/de
-  0.76%    4.208      7 Template:RadioButton
-  0.51%    2.816     10 Template:CheckBox
-  0.49%    2.697      1 Template:Emphasis
-  0.46%    2.543      6 Template:SpinBox
+100.00%  777.606      1 -total
+ 54.01%  420.009     10 Template:Code
+  1.34%   10.427      1 Template:Draft_Tools_navi/de
+  0.71%    5.512     10 Template:CheckBox
+  0.61%    4.753      7 Template:RadioButton
+  0.49%    3.828      2 Template:Navigation_menu_2
+  0.46%    3.559     18 Template:FALSE
+  0.45%    3.535      1 Template:Macro/de
+  0.45%    3.504      3 Template:ColoredText
+  0.44%    3.392      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117160607 and revision id 1739609. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117160625 and revision id 1739611. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
