--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -258,20 +258,18 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 		</li>
 </ul>
 </center>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 235px">
-			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_39.png&amp;filetimestamp=20141124205410&amp;.html" class="mw-file-description" title="Mode Flat Indoor The text will be placed flat."><img alt="Mode Flat Indoor The text will be placed flat." src="../File/FCCircularText_39.png" decoding="async" width="200" height="128" class="mw-file-element" data-file-width="500" data-file-height="320"></a></span></div>
-			<div class="gallerytext"><b>Mode Flat</b> <b>Indoor</b> The text will be placed flat.</div>
+			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_39.png&amp;filetimestamp=20141124205410&amp;.html" class="mw-file-description" title="Mode Flat Indoor Der Text wird flach platziert."><img alt="Mode Flat Indoor Der Text wird flach platziert." src="../File/FCCircularText_39.png" decoding="async" width="200" height="128" class="mw-file-element" data-file-width="500" data-file-height="320"></a></span></div>
+			<div class="gallerytext"><b>Mode Flat</b> <b>Indoor</b> Der Text wird flach platziert.</div>
 		</li>
 		<li class="gallerybox" style="width: 235px">
-			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_03.png&amp;filetimestamp=20140825210343&amp;.html" class="mw-file-description" title="Mode Stand Indoor The text will stand registered (same as clock)."><img alt="Mode Stand Indoor The text will stand registered (same as clock)." src="../File/FCCircularText_03.png" decoding="async" width="200" height="158" class="mw-file-element" data-file-width="531" data-file-height="419"></a></span></div>
-			<div class="gallerytext"><b>Mode Stand</b> <b>Indoor</b> The text will stand registered (same as clock).</div>
+			<div class="thumb" style="width: 230px; height: 210px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_03.png&amp;filetimestamp=20140825210343&amp;.html" class="mw-file-description" title="Mode Stand Indoor Der Text bleibt registriert (wie bei einer Uhr)."><img alt="Mode Stand Indoor Der Text bleibt registriert (wie bei einer Uhr)." src="../File/FCCircularText_03.png" decoding="async" width="200" height="158" class="mw-file-element" data-file-width="531" data-file-height="419"></a></span></div>
+			<div class="gallerytext"><b>Mode Stand</b> <b>Indoor</b> Der Text bleibt registriert (wie bei einer Uhr).</div>
 		</li>
 </ul>
 </center>
-</div>
 <p><span id="Second_area"></span>
 </p>
 <h4><span class="mw-headline" id="Zweiter_Bereich">Zweiter Bereich</span></h4>
@@ -976,35 +974,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117160627
+Cached time: 20260117160654
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.431 seconds
-Real time usage: 0.971 seconds
-Preprocessor visited node count: 1596/1000000
+CPU time usage: 0.462 seconds
+Real time usage: 0.738 seconds
+Preprocessor visited node count: 1595/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66511/5000000 bytes
+Unstrip post&#8208;expand size: 66517/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  777.606      1 -total
- 54.01%  420.009     10 Template:Code
-  1.34%   10.427      1 Template:Draft_Tools_navi/de
-  0.71%    5.512     10 Template:CheckBox
-  0.61%    4.753      7 Template:RadioButton
-  0.49%    3.828      2 Template:Navigation_menu_2
-  0.46%    3.559     18 Template:FALSE
-  0.45%    3.535      1 Template:Macro/de
-  0.45%    3.504      3 Template:ColoredText
-  0.44%    3.392      6 Template:SpinBox
+100.00%  468.749      1 -total
+  3.19%   14.954      1 Template:Draft_Tools_navi/de
+  2.54%   11.891      1 Template:Userdocnavi/de
+  2.38%   11.160      7 Template:RadioButton
+  1.38%    6.478      6 Template:SpinBox
+  1.26%    5.884     10 Template:Code
+  1.20%    5.632      2 Template:Navigation_menu_2
+  1.07%    5.011      3 Template:ColoredText
+  0.88%    4.117     14 Template:Incode
+  0.80%    3.763     10 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117160625 and revision id 1739611. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117160653 and revision id 1739613. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
