--- a/wiki/Installing_on_Linux.html
+++ b/wiki/Installing_on_Linux.html
@@ -12,8 +12,8 @@
 <li><a href="pt-br/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Instalando no Linux (83% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ro/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/ro (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="sv/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/sv (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="cs/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Instalace na Linux (0% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><a href="bg/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; Linux (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="cs/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Instalace na Linuxu (9% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="bg/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; Linux (3% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="ru/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="&#1059;&#1089;&#1090;&#1072;&#1085;&#1086;&#1074;&#1082;&#1072; &#1074; Linux (92% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="uk/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/uk (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="zh/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/zh (0% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -120,7 +120,9 @@
 </pre></div>
 <div class="mw-collapsible mw-collapsed toccolours">
 <h2><span class="mw-headline" id="OpenSUSE">OpenSUSE</span></h2>
-<p>FreeCAD is typically installed with YAST (abbr. Yet another Setup Tool) the Linux operating system setup and configuration tool, or in any terminal/console (root rights required) with:
+<p>FreeCAD has been typically installed with YAST (abbr. Yet another Setup Tool) until 09/2025.
+As the code base of the tool is not really being maintained for a long time, it has been replaced by MYRLYN since 09/2025, which is a drop-in replacement.
+</p><p>FreeCAD could also be installed in any terminal/console (root rights required) with:
 </p>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">zypper</span> <span class="n">install</span> <span class="n">FreeCAD</span>
 </pre></div></dd></dl>
@@ -222,35 +224,35 @@ releases from the github repository. These also tend to work on most x86_64 Linu
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260104163020
+Cached time: 20260117161216
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.104 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.142 seconds
 Preprocessor visited node count: 700/1000000
 Post&#8208;expand include size: 9350/2097152 bytes
 Template argument size: 3483/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 18/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 12848/5000000 bytes
+Unstrip post&#8208;expand size: 12849/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.527      1 -total
- 22.71%    5.570     18 Template:Code
- 14.87%    3.647      1 Template:Userdocnavi
- 12.39%    3.038     13 Template:Incode
- 10.45%    2.564      2 Template:Docnav
-  8.95%    2.194      1 Template:Navigation_menu_2
-  6.63%    1.627      1 Template:TOCright
-  6.19%    1.518      3 Template:MenuCommand
-  5.80%    1.422      1 Template:KEY
-  5.75%    1.411      7 Template:Emphasis
+100.00%   21.104      1 -total
+ 28.26%    5.963     18 Template:Code
+ 16.28%    3.435      1 Template:Userdocnavi
+ 10.29%    2.172      1 Template:Navigation_menu_2
+  9.55%    2.016      2 Template:Docnav
+  6.24%    1.317      1 Template:TOCright
+  6.23%    1.314      7 Template:Emphasis
+  5.83%    1.230     13 Template:Incode
+  5.32%    1.123      1 Template:KEY
+  4.88%    1.029      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260104163020 and revision id 1727371. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260117161258 and revision id 1739614. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
