--- a/wiki/de/PartDesign_AdditiveLoft.html
+++ b/wiki/de/PartDesign_AdditiveLoft.html
@@ -3,7 +3,7 @@
 <li><a href="../PartDesign_AdditiveLoft.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="PartDesign AdditiveLoft (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/PartDesign_AdditiveLoft.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign AdditiveLoft/tr (5% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/PartDesign_AdditiveLoft.html" class="mw-pt-progress mw-pt-progress--med" title="Dise&ntilde;oPiezas AditivoLoft (20% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/PartDesign_AdditiveLoft.html" class="mw-pt-progress mw-pt-progress--high" title="PartDesign Lissage additif (85% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/PartDesign_AdditiveLoft.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Lissage additif (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/PartDesign_AdditiveLoft.html" class="mw-pt-progress mw-pt-progress--high" title="PartDesign: Loft additivo (85% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/PartDesign_AdditiveLoft.html" class="mw-pt-progress mw-pt-progress--complete" title="Projekt Cz&#281;&#347;ci: Uzupe&#322;nianie wyci&#261;gni&#281;ciem przez profile (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/PartDesign_AdditiveLoft.html" class="mw-pt-progress mw-pt-progress--low" title="Loft aditivo (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -166,35 +166,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251121080016
+Cached time: 20260117162117
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.143 seconds
-Real time usage: 0.253 seconds
+CPU time usage: 0.089 seconds
+Real time usage: 0.120 seconds
 Preprocessor visited node count: 557/1000000
 Post&#8208;expand include size: 22857/2097152 bytes
 Template argument size: 7375/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2176/5000000 bytes
+Unstrip post&#8208;expand size: 2181/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.192      1 -total
- 20.58%   10.328      7 Template:PropertyData/de
- 12.23%    6.137      6 Template:Button
- 11.66%    5.851      2 Template:Docnav/de
- 10.68%    5.361      1 Template:PartDesign_Tools_navi/de
- 10.10%    5.067     10 Template:Variable
-  8.74%    4.389      1 Template:Caption
-  8.56%    4.294      1 Template:GuiCommand/de
-  6.88%    3.454      1 Template:Userdocnavi/de
-  5.65%    2.838      1 Template:Version/de
+100.00%   34.831      1 -total
+ 20.86%    7.266      7 Template:PropertyData/de
+ 15.75%    5.485      1 Template:PartDesign_Tools_navi/de
+ 14.28%    4.974     10 Template:Variable
+ 10.82%    3.767      2 Template:Docnav/de
+ 10.61%    3.694      3 Template:PropertyData
+ 10.15%    3.536      1 Template:GuiCommand/de
+  6.32%    2.202      1 Template:Version/de
+  6.09%    2.121      1 Template:Userdocnavi/de
+  5.37%    1.872      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:90358-0!canonical and timestamp 20251121080016 and revision id 1697767. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:90358-0!canonical and timestamp 20260117162117 and revision id 1697767. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
