--- a/wiki/de/PartDesign_AdditiveLoft.html
+++ b/wiki/de/PartDesign_AdditiveLoft.html
@@ -166,12 +166,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117162117
+Cached time: 20260117162127
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.120 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.100 seconds
 Preprocessor visited node count: 557/1000000
 Post&#8208;expand include size: 22857/2097152 bytes
 Template argument size: 7375/2097152 bytes
@@ -182,19 +182,19 @@ Unstrip post&#8208;expand size: 2181/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.831      1 -total
- 20.86%    7.266      7 Template:PropertyData/de
- 15.75%    5.485      1 Template:PartDesign_Tools_navi/de
- 14.28%    4.974     10 Template:Variable
- 10.82%    3.767      2 Template:Docnav/de
- 10.61%    3.694      3 Template:PropertyData
- 10.15%    3.536      1 Template:GuiCommand/de
-  6.32%    2.202      1 Template:Version/de
-  6.09%    2.121      1 Template:Userdocnavi/de
-  5.37%    1.872      1 Template:Caption
+100.00%   21.184      1 -total
+ 19.99%    4.234      7 Template:PropertyData/de
+ 14.67%    3.107     10 Template:Variable
+ 12.85%    2.722      1 Template:PartDesign_Tools_navi/de
+ 10.23%    2.167      3 Template:PropertyData
+  9.69%    2.053      2 Template:Docnav/de
+  9.33%    1.976      1 Template:GuiCommand/de
+  7.16%    1.516      1 Template:Version/de
+  7.12%    1.508      1 Template:Userdocnavi/de
+  5.98%    1.267      6 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:90358-0!canonical and timestamp 20260117162117 and revision id 1697767. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:90358-0!canonical and timestamp 20260117162127 and revision id 1697767. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
