Added new properties for ver.0.3.3

--- a/wiki/Cables_ElectricalDevice.html
+++ b/wiki/Cables_ElectricalDevice.html
@@ -1,7 +1,7 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables ElectricalDevice</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Cables+ElectricalDevice&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Betriebsmittel (86% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Betriebsmittel (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--low" title="Cables Dispositif &eacute;lectrique (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
+<li><a href="fr/Cables_ElectricalDevice.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Dispositif &eacute;lectrique (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Cables_CableLightPoint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Cables_CableLightPoint.html" title="Cables CableLightPoint">CableLightPoint</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Cables_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Cables_Material.html" title="Cables Material">Material</a>
@@ -50,7 +50,7 @@
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>The <span typeof="mw:File"><a href="index.php?title=Cables_ElectricalDevice.svg&amp;filetimestamp=20251011135447&amp;.html" class="mw-file-description"><img src="File/Cables_ElectricalDevice.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Electrical Device</a> represents a model of any <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Electrical_device">electrical device</a> that has the possibility of direct cable connection. Its shape can be selected from <a href="#Data"><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Preset</b></a> list upon creation. There is only non parametric shape type available. It is called 'Fixed'.
-</p><p>The 'Fixed' shape type creates non parametric device object with a shape taken from external <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/ISO_10303">STEP</a> file. There are a few predefined STEP device models shipped together with Cables Workbench. Moreover, the user can create their own device library, this is described in <a href="#Electrical_Device_Presets">Electrical Device Presets</a>. In addition to the shape the certain number of <a href="Cables_CableTerminal.html" title="Cables CableTerminal">CableTerminals</a> are created with predefined size and position corresponding to connection points. Additionally one or more <a href="Cables_SuppLines.html" title="Cables SuppLines">SuppLines</a> objects can be created forming the basis for the cable entering the device.
+</p><p>The 'Fixed' shape type creates non parametric device object with a shape taken from external <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/ISO_10303">STEP</a> file. There are a few predefined STEP device models shipped together with Cables Workbench. Moreover, the user can create their own device library, this is described in <a href="#Electrical_Device_presets">Electrical Device presets</a>. In addition to the shape the certain number of <a href="Cables_CableTerminal.html" title="Cables CableTerminal">CableTerminals</a> are created with predefined size and position corresponding to connection points. Additionally one or more <a href="Cables_SuppLines.html" title="Cables SuppLines">SuppLines</a> objects can be created forming the basis for the cable entering the device.
 </p><p>The <b>Electrical Device</b> belongs to the <a href="Arch_Component.html" title="Arch Component">Arch Component</a> class and inherits all of its properties.
 </p><p><b>Electrical Device</b> object can be colored by attaching desired <a href="Arch_SetMaterial.html" title="Arch SetMaterial">Material</a> to the <b>Material</b> property. <a href="Arch_MultiMaterial.html" title="Arch MultiMaterial">MultiMaterial</a> is also supported. It can be used to change the original device colors to those defined in the multimaterial composition. Important: the number of colors in the multimaterial must match the number of original colors of the device.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Cables_ElectricalDevice_Example1.png&amp;filetimestamp=20251016152645&amp;.html" class="mw-file-description"><img src="File/Cables_ElectricalDevice_Example1.png" decoding="async" width="400" height="400" class="mw-file-element" data-file-width="400" data-file-height="400"></a></span>
@@ -152,7 +152,8 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Base</b><span style="font-size:80%;"> (<code>Link</code>)</span>: An external shape of any <a href="Part_Workbench.html" title="Part Workbench">Shape</a>-based base object can be used here. This will replace the default method of shape creaction and an external shape will be used. <b>Number Of Terminals</b> and <b>Number Of Supp Lines</b> parameters become visible and can be changed if Base property is not None.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Electrical Device</span>
 </p>
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (hidden by default) Specifies the number of a <a href="Cables_SuppLines.html" title="Cables SuppLines">SuppLines</a> child objects. The default value is 0.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Claim Children</b><span style="font-size:80%;"> (<code>PropertyBool</code>)</span>: If it is <code>true</code> it will claim the linked Terminals and SuppLines as children in the <a href="Tree_View.html" title="Tree View">Tree View</a> (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (hidden by default) Specifies the number of a <a href="Cables_SuppLines.html" title="Cables SuppLines">SuppLines</a> child objects. The default value is 0.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (hidden by default) Specifies the number of a <a href="Cables_CableTerminal.html" title="Cables CableTerminal">CableTerminal</a> child objects. The default value is 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Data</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Specifies the predefined set of parameters for Electrical Device. The default preset is <code>MCB_1-Pole</code>.</li></ul>
 <h2><span class="mw-headline" id="Tutorials">Tutorials</span></h2>
@@ -172,35 +173,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251116111813
+Cached time: 20260117175847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.133 seconds
-Preprocessor visited node count: 865/1000000
-Post&#8208;expand include size: 11213/2097152 bytes
-Template argument size: 3664/2097152 bytes
+CPU time usage: 0.093 seconds
+Real time usage: 0.101 seconds
+Preprocessor visited node count: 931/1000000
+Post&#8208;expand include size: 11674/2097152 bytes
+Template argument size: 3748/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2133/5000000 bytes
+Unstrip post&#8208;expand size: 2145/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.423      1 -total
- 20.72%    5.474      5 Template:PropertyData
- 14.88%    3.931      5 Template:Variable
- 12.63%    3.336      2 Template:TitleProperty
- 11.22%    2.965      1 Template:GuiCommand
- 10.75%    2.841      6 Template:Code
-  7.75%    2.047      2 Template:Docnav
-  5.69%    1.503      2 Template:Value
-  5.66%    1.495      8 Template:FileName
-  5.51%    1.455     12 Template:Incode
+100.00%   24.434      1 -total
+ 18.80%    4.593      6 Template:PropertyData
+ 15.36%    3.754      1 Template:GuiCommand
+ 12.86%    3.142      6 Template:Variable
+  9.96%    2.433      6 Template:Code
+  9.38%    2.291      2 Template:TitleProperty
+  7.41%    1.811      2 Template:Docnav
+  6.07%    1.484      1 Template:TRUE
+  5.17%    1.264     13 Template:Incode
+  4.80%    1.172      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394929-0!canonical and timestamp 20251116111813 and revision id 1693103. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394929-0!canonical and timestamp 20260117175858 and revision id 1739622. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
