--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -14,7 +14,7 @@
 <li><a href="../ro/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (4% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (10% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="../cs/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; centrum (8% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="../cs/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="U&#382;ivatelsk&eacute; centrum (98% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#1062;&#1077;&#1085;&#1090;&#1088; &#1087;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1081; (84% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -57,7 +57,7 @@
 <p><span id="Basic_application"></span>
 </p>
 <h3><span id=".D0.9E.D1.81.D0.BD.D0.BE.D0.B2.D0.BD.D0.B0_.D0.A3.D0.BF.D0.BE.D1.82.D1.80.D0.B5.D0.B1.D0.B0"></span><span class="mw-headline" id="&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1072;_&#1059;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;">&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1072; &#1059;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;</span></h3>
-<ul><li><a href="../Interface.html" title="Interface">Interface</a>: &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1098;&#1090; &#1085;&#1072; FreeCAD &#1077; &#1089;&#1098;&#1089;&#1090;&#1072;&#1074;&#1077;&#1085; &#1086;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;, &#1074;&#1082;&#1083;&#1102;&#1095;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>,  <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a>,  <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a>, &#1080; <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>.</li>
+<ul><li><a href="../bg/Interface.html" title="Interface/bg">&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;</a>: &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1098;&#1090; &#1085;&#1072; FreeCAD &#1077; &#1089;&#1098;&#1089;&#1090;&#1072;&#1074;&#1077;&#1085; &#1086;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;, &#1074;&#1082;&#1083;&#1102;&#1095;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>,  <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a>,  <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a>, &#1080; <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>.</li>
 <li><a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1074;&#1080;&#1076;&#1086;&#1074;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1080;&#1083;&#1080; &#1090;&#1088;&#1072;&#1082;&#1087;&#1072;&#1076;&#1072; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;.</li>
 <li><a href="../Selection_methods.html" title="Selection methods">Selection methods</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1084;&#1077;&#1090;&#1086;&#1076;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1086;&#1088; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;&#1072;.</li>
 <li><a href="../Object_name.html" title="Object name">Objects naming</a>: FreeCAD &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1080;&#1084;&#1072;&#1090; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1086; &#1089;&#1072;&#1084;&#1086; &#1079;&#1072; &#1095;&#1077;&#1090;&#1077;&#1085;&#1077; <code>Name</code> &#1082;&#1086;&#1080;&#1090;&#1086; &#1077;&#1076;&#1085;&#1086;&#1079;&#1085;&#1072;&#1095;&#1085;&#1086; &#1075;&#1080; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;, &#1080; <code>Label</code>, &#1082;&#1086;&#1077;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072; &#1086;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;.</li>
@@ -125,7 +125,7 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../bg/Getting_started.html" title="Getting started/bg">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../bg/Download.html" title="Download/bg">Download</a>, <a href="../bg/Installing_on_Windows.html" title="Installing on Windows/bg">Windows</a>, <a href="../bg/Installing_on_Linux.html" title="Installing on Linux/bg">Linux</a>, <a href="../bg/Installing_on_Mac.html" title="Installing on Mac/bg">Mac</a>, <a href="../bg/Installing_additional_components.html" title="Installing additional components/bg">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/bg (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/bg&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/bg (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/bg (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../bg/About_FreeCAD.html" title="About FreeCAD/bg">About FreeCAD</a>, <a href="../index.php?title=Interface/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/bg (page does not exist)">Interface</a>, <a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/bg (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/bg (page does not exist)">Object name</a>, <a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">Preferences</a>, <a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>, <a href="../bg/Document_structure.html" title="Document structure/bg">Document structure</a>, <a href="../index.php?title=Property/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Property/bg (page does not exist)">Properties</a>, <a href="../bg/Help_FreeCAD.html" title="Help FreeCAD/bg">Help FreeCAD</a>, <a href="../index.php?title=Donate/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/bg (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../bg/About_FreeCAD.html" title="About FreeCAD/bg">About FreeCAD</a>, <a href="../bg/Interface.html" title="Interface/bg">Interface</a>, <a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/bg (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/bg (page does not exist)">Object name</a>, <a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">Preferences</a>, <a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>, <a href="../bg/Document_structure.html" title="Document structure/bg">Document structure</a>, <a href="../index.php?title=Property/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Property/bg (page does not exist)">Properties</a>, <a href="../bg/Help_FreeCAD.html" title="Help FreeCAD/bg">Help FreeCAD</a>, <a href="../index.php?title=Donate/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/bg (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../bg/Tutorials.html" title="Tutorials/bg">Tutorials</a>, <a href="../index.php?title=Video_tutorials/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Video tutorials/bg (page does not exist)">Video tutorials</a></li>
 <li><b><a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/bg (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/bg (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/bg (page does not exist)">BIM</a>, <a href="../index.php?title=CAM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="CAM Workbench/bg (page does not exist)">CAM</a>, <a href="../bg/Draft_Workbench.html" title="Draft Workbench/bg">Draft</a>, <a href="../index.php?title=FEM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="FEM Workbench/bg (page does not exist)">FEM</a>, <a href="../index.php?title=Inspection_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Inspection Workbench/bg (page does not exist)">Inspection</a>, <a href="../index.php?title=Material_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/bg (page does not exist)">Material</a>, <a href="../bg/Mesh_Workbench.html" title="Mesh Workbench/bg">Mesh</a>, <a href="../index.php?title=OpenSCAD_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="OpenSCAD Workbench/bg (page does not exist)">OpenSCAD</a>, <a href="../index.php?title=Part_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Part Workbench/bg (page does not exist)">Part</a>, <a href="../bg/PartDesign_Workbench.html" title="PartDesign Workbench/bg">PartDesign</a>, <a href="../index.php?title=Points_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Points Workbench/bg (page does not exist)">Points</a>, <a href="../index.php?title=Reverse_Engineering_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Reverse Engineering Workbench/bg (page does not exist)">Reverse Engineering</a>, <a href="../bg/Robot_Workbench.html" title="Robot Workbench/bg">Robot</a>, <a href="../bg/Sketcher_Workbench.html" title="Sketcher Workbench/bg">Sketcher</a>, <a href="../bg/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/bg">Spreadsheet</a>, <a href="../bg/Surface_Workbench.html" title="Surface Workbench/bg">Surface</a>, <a href="../bg/TechDraw_Workbench.html" title="TechDraw Workbench/bg">TechDraw</a>, <a href="../index.php?title=Testing/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/bg (page does not exist)">Test Framework</a></li></ul>
@@ -136,33 +136,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112175354
+Cached time: 20260117194729
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.184 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.339 seconds
 Preprocessor visited node count: 293/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4273/5000000 bytes
+Unstrip post&#8208;expand size: 4275/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.845      1 -total
- 35.94%    6.414      1 Template:Userdocnavi/bg
- 18.44%    3.291      1 Template:TOCright
- 13.68%    2.441      1 Template:Navigation_menu_2
- 12.84%    2.290      7 Template:Incode
- 10.89%    1.944      2 Template:VersionMinus
-  8.83%    1.575      1 Template:Button
-  7.76%    1.385      3 Template:Version
+100.00%   31.991      1 -total
+ 50.48%   16.150      1 Template:Userdocnavi/bg
+ 20.11%    6.433      1 Template:Navigation_menu_2
+ 11.53%    3.689      7 Template:Incode
+ 10.54%    3.371      1 Template:TOCright
+  9.28%    2.969      2 Template:VersionMinus
+  8.07%    2.582      3 Template:Version
+  7.06%    2.259      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260112175353 and revision id 1737616. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260117194728 and revision id 1739624. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
