--- a/wiki/bg/3D_View.html
+++ b/wiki/bg/3D_View.html
@@ -15,7 +15,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
-<p>The <a href="../3D_View.html" title="3D View">3D View</a> of FreeCAD is an instance of a Coin3D <a href="../Scenegraph.html" title="Scenegraph">scenegraph</a> that forms the most important window in the <a href="../Interface.html" title="Interface">interface</a>. Coin3D is a library that implements the OpenInventor 2.1 scene description standard.
+<p><a class="mw-selflink selflink">3D View</a> &#1074;&#1098;&#1074; FreeCAD &#1077; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; &#1082;&#1098;&#1084; Coin3D <a href="../Scenegraph.html" title="Scenegraph">scenegraph</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1092;&#1086;&#1088;&#1084;&#1080;&#1088;&#1072; &#1085;&#1072;&#1081;-&#1074;&#1072;&#1078;&#1085;&#1080;&#1103;&#1090; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1074; <a href="../bg/Interface.html" title="Interface/bg">&#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;</a>. Coin3D &#1077; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1088;&#1077;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072; &#1089;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1072; &#1079;&#1072; &#1086;&#1087;&#1080;&#1089;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1094;&#1077;&#1085;&#1080; OpenInventor 2.1.
 </p><p>Certain properties of the view, like background color, <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a> style, and zooming steps, can be configured in the <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_3D_view.png&amp;filetimestamp=20190921023511&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_3D_view.png" decoding="async" width="600" height="318" class="mw-file-element" data-file-width="890" data-file-height="471"></a></span>
 </p>
@@ -57,12 +57,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117194856
+Cached time: 20260117195850
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.057 seconds
-Real time usage: 0.094 seconds
+CPU time usage: 0.062 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 10078/2097152 bytes
 Template argument size: 2882/2097152 bytes
@@ -73,15 +73,15 @@ Unstrip post&#8208;expand size: 2143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.135      1 -total
- 42.42%    6.845      1 Template:Interface_navi/bg
- 31.35%    5.058      1 Template:Userdocnavi/bg
- 20.37%    3.286      2 Template:Navigation_menu_2
- 13.33%    2.150      1 Template:Caption
-  9.73%    1.570      1 Template:TOCright
+100.00%   24.440      1 -total
+ 48.14%   11.765      1 Template:Interface_navi/bg
+ 28.06%    6.857      1 Template:Userdocnavi/bg
+ 16.94%    4.141      2 Template:Navigation_menu_2
+ 13.04%    3.187      1 Template:TOCright
+  9.19%    2.246      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117194856 and revision id 1739628. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117195850 and revision id 1739630. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
