Created page with "== Детайли =="

--- a/wiki/bg/3D_View.html
+++ b/wiki/bg/3D_View.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/3D_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Okno widoku 3D (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/3D_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Vista 3D (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/3D_View.html" class="mw-pt-progress mw-pt-progress--high" title="Vista 3D (73% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/3D_View.html" class="mw-pt-progress mw-pt-progress--complete" title="3D &#1042;&#1080;&#1076; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/3D_View.html" class="mw-pt-progress mw-pt-progress--low" title="3D&#12499;&#12517;&#12540; (0% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/3D_View.html" class="mw-pt-progress mw-pt-progress--med" title="3D &#48372;&#44592; (36% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -24,8 +24,9 @@
 </p>
 <h2><span id=".D0.9A.D0.BE.D0.BD.D1.82.D0.B5.D0.BA.D1.81.D1.82.D0.BD.D0.BE_.D0.BC.D0.B5.D0.BD.D1.8E"></span><span class="mw-headline" id="&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;_&#1084;&#1077;&#1085;&#1102;">&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102;</span></h2>
 <p>&#1054;&#1087;&#1094;&#1080;&#1080;&#1090;&#1077; &#1074; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072; &#1079;&#1072;&#1074;&#1080;&#1089;&#1103;&#1090; &#1086;&#1090; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;(&#1080;) &#1080; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1072;&#1090;&#1072; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072;. &#1047;&#1072; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077;&#1090;&#1077; &#1090;&#1086;&#1074;&#1072; &#1084;&#1077;&#1085;&#1102;, &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1077;&#1076;&#1080;&#1085; &#1080;&#1083;&#1080; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080; &#1089;&#1083;&#1077;&#1076; &#1090;&#1086;&#1074;&#1072; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;.
+</p><p><span id="Details"></span>
 </p>
-<h2><span class="mw-headline" id="Details">Details</span></h2>
+<h2><span id=".D0.94.D0.B5.D1.82.D0.B0.D0.B9.D0.BB.D0.B8"></span><span class="mw-headline" id="&#1044;&#1077;&#1090;&#1072;&#1081;&#1083;&#1080;">&#1044;&#1077;&#1090;&#1072;&#1081;&#1083;&#1080;</span></h2>
 <p>FreeCAD uses the Quarter library to use Coin3D in a Qt environment.
 </p><p>It is possible to interact directly with the 3D View scenegraph from the <a href="../Python_Console.html" title="Python Console">Python Console</a> by using the Python library Pivy.
 </p><p>For more information see the power user documentation:
@@ -59,31 +60,31 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117201429
+Cached time: 20260117201452
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.104 seconds
-Preprocessor visited node count: 135/1000000
+CPU time usage: 0.061 seconds
+Real time usage: 0.129 seconds
+Preprocessor visited node count: 136/1000000
 Post&#8208;expand include size: 10408/2097152 bytes
 Template argument size: 3047/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2143/5000000 bytes
+Unstrip post&#8208;expand size: 2144/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.420      1 -total
- 45.23%    7.426      1 Template:Interface_navi/bg
- 37.75%    6.198      1 Template:Userdocnavi/bg
- 30.72%    5.044      2 Template:Navigation_menu_2
-  7.74%    1.271      1 Template:Caption
-  7.56%    1.242      1 Template:TOCright
+100.00%   26.148      1 -total
+ 42.57%   11.132      1 Template:Userdocnavi/bg
+ 35.75%    9.347      1 Template:Interface_navi/bg
+ 30.76%    8.043      2 Template:Navigation_menu_2
+ 12.02%    3.144      1 Template:Caption
+  7.88%    2.061      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201428 and revision id 1739642. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411520-0!canonical and timestamp 20260117201451 and revision id 1739644. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
