Updated page Package Metadata

--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -212,12 +212,15 @@
 </p>
 <h3><span id=".3Ctag.3E"></span><span class="mw-headline" id="&lt;tag&gt;">&lt;tag&gt;</span></h3>
 <p>A simple text tag used for categorization when using a package manager. Multiple &lt;tag&gt; elements may be specified.
-</p><p>=== &lt;freecadmin&gt;
-</p><p>The minimum version of FreeCAD required to use this package/element, as a semantic version 2.0 string in the format MAJOR.MINOR.BUILD. This tag may be used to specify that a particular branch of this addon should only be shown to users of a specific FreeCAD version (or later). It may be combined with <code>&lt;freecadmax&gt;</code> to set a specific valid range.
-</p><p>=== &lt;freecadmax&gt;
-</p><p>The maximum version of FreeCAD required to use package/element, as a semantic version 2.0 string in the format MAJOR.MINOR.BUILD. This tag may be used to specify that a particular branch of this addon should only be shown to users of a specific FreeCAD version (or earlier). It may be combined with <code>&lt;freecadmin&gt;</code> to set a specific valid range. Note that it is an exact version string, so to indicate that the addon supports an entire minor release, the "patch" component should be chosen to be a suitably large number (e.g. "1.0.99" to support the entire 1.0.x release series).
-</p><p>=== &lt;pythonmin&gt;
-</p><p>(New in FreeCAD 0.21, ignored by previous versions.) The minimum version of Python required to use package/element, as a semantic version 2.0 string in the format MAJOR.MINOR. The Addon Manager will not permit an Addon to be installed on a system running a version of Python before this one. Only Python 3.x versions are supported. Although you may specify a three-component version, only the minor number is considered during the compatibility check.
+</p>
+<h3><span id=".3Cfreecadmin.3E"></span><span class="mw-headline" id="&lt;freecadmin&gt;">&lt;freecadmin&gt;</span></h3>
+<p>The minimum version of FreeCAD required to use this package/element, as a semantic version 2.0 string in the format MAJOR.MINOR.BUILD. This tag may be used to specify that a particular branch of this addon should only be shown to users of a specific FreeCAD version (or later). It may be combined with <code>&lt;freecadmax&gt;</code> to set a specific valid range.
+</p>
+<h3><span id=".3Cfreecadmax.3E"></span><span class="mw-headline" id="&lt;freecadmax&gt;">&lt;freecadmax&gt;</span></h3>
+<p>The maximum version of FreeCAD required to use package/element, as a semantic version 2.0 string in the format MAJOR.MINOR.BUILD. This tag may be used to specify that a particular branch of this addon should only be shown to users of a specific FreeCAD version (or earlier). It may be combined with <code>&lt;freecadmin&gt;</code> to set a specific valid range. Note that it is an exact version string, so to indicate that the addon supports an entire minor release, the "patch" component should be chosen to be a suitably large number (e.g. "1.0.99" to support the entire 1.0.x release series).
+</p>
+<h3><span id=".3Cpythonmin.3E"></span><span class="mw-headline" id="&lt;pythonmin&gt;">&lt;pythonmin&gt;</span></h3>
+<p>(New in FreeCAD 0.21, ignored by previous versions.) The minimum version of Python required to use package/element, as a semantic version 2.0 string in the format MAJOR.MINOR. The Addon Manager will not permit an Addon to be installed on a system running a version of Python before this one. Only Python 3.x versions are supported. Although you may specify a three-component version, only the minor number is considered during the compatibility check.
 </p>
 <h2><span class="mw-headline" id="Validation">Validation</span></h2>
 <p>To validate your package.xml file you can enable "developer mode" in the Addon Manager: create a boolean variable called "developerMode" in the "Addons" parameter group and set it to True: <b>Tools &rarr; Edit parameters... &rarr; BaseApp &rarr; Preferences &rarr; Addons &rarr; developerMode</b>. When the Addon Manager has finished reading the Addons database it will examine all available package.xml files for errors.
@@ -359,13 +362,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117212350
+Cached time: 20260117213044
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.086 seconds
-Preprocessor visited node count: 632/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.104 seconds
+Preprocessor visited node count: 638/1000000
 Post&#8208;expand include size: 7122/2097152 bytes
 Template argument size: 2537/2097152 bytes
 Highest expansion depth: 5/100
@@ -375,17 +378,17 @@ Unstrip post&#8208;expand size: 8585/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.503      1 -total
- 25.38%    3.681      1 Template:Powerdocnavi
- 17.13%    2.484      1 Template:Code
- 13.88%    2.013      1 Template:Navigation_menu_2
- 13.79%    2.000     38 Template:Incode
- 10.89%    1.579      1 Template:MenuCommand
-  6.59%    0.955      1 Template:TOCright
-  6.21%    0.901      3 Template:Version
+100.00%   17.650      1 -total
+ 20.23%    3.571      1 Template:TOCright
+ 17.97%    3.171      1 Template:Powerdocnavi
+ 17.63%    3.112     38 Template:Incode
+ 12.31%    2.172      1 Template:Navigation_menu_2
+ 10.44%    1.843      3 Template:Version
+  9.34%    1.649      1 Template:Code
+  6.23%    1.100      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117212404 and revision id 1739678. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117213045 and revision id 1739679. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
